# fullauth-django-api

./: .env.example  .env.local  .gitignore  custom_storages.py  db.sqlite3  pyproject.toml  requirements.txt
backend/: .gitignore  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/users/: urls.py
config/: settings.py  urls.py
users/migrations/: 0001_initial.py
